<resources>
    <string name="app_name">billReminder</string>
    <string name="mainBillButton">RadioButton</string>
    <string name="mainSubButton">RadioButton</string>
    <string name="addTitle">Add Payment</string>
    <string name="add_Title">ADD PAYMENT</string>
    <string name="addTitleHint">Title</string>
    <string name="addAmountHint">Amount</string>
    <string name="addBillButton">Single Bill</string>
    <string name="addSubButton">Subscription</string>
    <string name="addIntervalText">Interval</string>
    <string name="addReminderText">Reminder Notifications</string>
    <string name="addPaymentButton">ADD</string>
    <string name="addAlarmHint">Alarm Time</string>
    <string-array name="Interval">
        <item>Monthly</item>
        <item>Daily</item>
        <item>Annually</item>
    </string-array>
    <string-array name="Ringtone">


    </string-array>



</resources>
