<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_purple">

    <TextView
        android:id="@+id/addHeading"
        android:layout_width="162dp"
        android:layout_height="39dp"
        android:layout_marginEnd="60dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/add_Title"
        android:textColor="@android:color/background_light"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleView"
        android:layout_width="290dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/addTitleHint"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subscriptionButton" />

    <View
        android:id="@+id/divider1"
        android:layout_width="292dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="?attr/colorBackgroundFloating"
        app:layout_constraintEnd_toEndOf="@+id/titleView"
        app:layout_constraintStart_toStartOf="@+id/titleView"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <EditText
        android:id="@+id/amountView"
        android:layout_width="173dp"
        android:layout_height="29dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/addAmountHint"
        android:inputType="numberDecimal"
        android:textColorHint="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider1" />

    <RadioButton
        android:id="@+id/billButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/addBillButton"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/subscriptionButton"
        app:layout_constraintHorizontal_bias="0.392"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addHeading" />

    <RadioButton
        android:id="@+id/subscriptionButton"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/addSubButton"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addHeading" />

    <View
        android:id="@+id/divider2"
        android:layout_width="173dp"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/amountView"
        app:layout_constraintStart_toStartOf="@+id/amountView"
        app:layout_constraintTop_toBottomOf="@+id/amountView" />

    <Spinner
        android:id="@+id/currencySpinner"
        android:layout_width="100dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/amountView"
        app:layout_constraintHorizontal_bias="0.577"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleView" />

    <View
        android:id="@+id/divider3"
        android:layout_width="100dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/currencySpinner"
        app:layout_constraintStart_toStartOf="@+id/currencySpinner"
        app:layout_constraintTop_toBottomOf="@+id/currencySpinner" />

    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="331dp"
        android:layout_height="292dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:focusedMonthDateColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/alarmTimeView"
        android:layout_width="111dp"
        android:layout_height="28dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/addAlarmHint"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <Spinner
        android:id="@+id/ringView"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.902"
        app:layout_constraintStart_toEndOf="@+id/alarmTimeView"
        app:layout_constraintTop_toBottomOf="@+id/calendarView" />

    <View
        android:id="@+id/divider5"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/ringView"
        app:layout_constraintStart_toStartOf="@+id/ringView"
        app:layout_constraintTop_toBottomOf="@+id/ringView" />

    <Spinner
        android:id="@+id/intervalView"
        android:layout_width="134dp"
        android:layout_height="29dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ringView" />

    <View
        android:id="@+id/divider6"
        android:layout_width="111dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/alarmTimeView"
        app:layout_constraintStart_toStartOf="@+id/alarmTimeView"
        app:layout_constraintTop_toBottomOf="@+id/alarmTimeView" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="44dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="69dp"
        android:layout_height="29dp"
        android:text="@string/addIntervalText"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/intervalView"
        app:layout_constraintTop_toTopOf="@+id/intervalView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="157dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/addReminderText"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toEndOf="@+id/intervalView"
        app:layout_constraintTop_toBottomOf="@+id/ringView" />

    <Button
        android:id="@+id/addPaymentButton"
        android:layout_width="121dp"
        android:layout_height="39dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/toggle_button_design"
        android:text="@string/addPaymentButton"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <View
        android:id="@+id/divider7"
        android:layout_width="139dp"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="@+id/intervalView"
        app:layout_constraintStart_toStartOf="@+id/intervalView"
        app:layout_constraintTop_toBottomOf="@+id/intervalView" />

</android.support.constraint.ConstraintLayout>